# TSFileTranslator

./: .gitmodules  App.cpp  CMakeLists.txt  CMakeUserPresets.json  HomePage.cpp  HomePage.h  LogPage.cpp  LogPage.h  OutputWindow.cpp  OutputWindow.h  README.md  Settings.ini  SettingsDlg.cpp  SettingsDlg.h  SettingsPage.cpp  SettingsPage.h  TSWindow.cpp  TSWindow.h  TaskButton.cpp  TaskButton.h  TaskCard.cpp  TaskCard.h  TaskViewPage.cpp  TaskViewPage.h  TranslatorWindow.cpp  TranslatorWindow.h  ___Configs.cpp  ___Configs.h  ___Xml.cpp  ___Xml.h  ___def.h
StyleSheet/atomOneDark/: HomePage.qss  LogPage.qss  SettingsPage.qss  TSWindow.qss  TaskButton.qss  TaskCard.qss  TaskViewPage.qss
StyleSheet/dark/: HomePage.qss  LogPage.qss  SettingsPage.qss  TSWindow.qss  TaskButton.qss  TaskCard.qss  TaskViewPage.qss
StyleSheet/light/: HomePage.qss  LogPage.qss  SettingsPage.qss  TSWindow.qss  TaskButton.qss  TaskCard.qss  TaskViewPage.qss
config/: config.ini
docs/: ref.md
